feat: application version updated; Ubuntu replaced by Debian
BREAKING CHANGE: Ubuntu base operating system replaced by Debian

--- a/hue.env
+++ b/hue.env
@@ -4,6 +4,7 @@ CONF_HUE_____1desktop1____http__port=8888
 CONF_HUE_____1desktop1____time__zone=Europe/Moscow
 CONF_HUE_____1desktop1____server__user=admin
 CONF_HUE_____1desktop1____server__group=admin
+CONF_HUE_____1desktop1____default__user=hue
 CONF_HUE_____1desktop1____default__hdfs__superuser=hdfs
 CONF_HUE_____1desktop1____audit__event__log__dir=/tmp/logs/audit.log
 CONF_HUE_____1desktop1____app__blacklist=beeswax,impala,security,jobbrowser,rdbms,jobsub,pig,hbase,sqoop,zookeeper,oozie,indexer
@@ -38,9 +39,15 @@ CONF_HUE_____1hadoop1________2yarn__clusters2________3default3____resourcemanage
 CONF_HUE_____1hadoop1________2yarn__clusters2________3default3____history__server__api__url=http://hadoop-historyserver:8188
 CONF_HUE_____1hadoop1________2yarn__clusters2________3default3____spark__history__server__url=http://spark-historyserver:18080
 
+CONF_HUE_____1metastore1____enable__new__create__table=true
+CONF_HUE_____1metastore1____force__hs2__metadata=false
+CONF_HUE_____1metastore1____show__table__erd=false
+
 CONF_HUE_____1spark1____livy__server__url=http://livy:8998
 CONF_HUE_____1spark1____sql__server__host=spark-thriftserver
 CONF_HUE_____1spark1____sql__server__port=10000
+
+CONF_HUE_____1filebrowser1____enable__extract__uploaded__archive=true
 
 CONF_HUE_____1kafka1________2kafka2____is__enabled=true
 CONF_HUE_____1kafka1________2kafka2____api__url=http://kafka:9092
