--- a/config/conf/hue.ini
+++ b/config/conf/hue.ini
@@ -94,6 +94,15 @@ http_500_debug_mode=false
 # This is available for the Impala service only currently. It is highly recommended to only point to a series of coordinator-only nodes only.
 # enable_smart_thrift_pool=false
 
+# Limits for request headers
+## limit_request_field_size=8190
+## limit_request_fields=100
+## limit_request_line=4094
+
+# Flag to disable webpage caching. Enabling this flag will reduce the performance of the application but it ensures that
+# the client is always receiving the latest version of the resource.
+## custom_cache_control=true
+
 # Filename of SSL Certificate
 ## ssl_certificate=
 
@@ -134,7 +143,7 @@ http_500_debug_mode=false
 # https://wiki.mozilla.org/Security/Server_Side_TLS v3.7 intermediate
 # recommendation, which should be compatible with Firefox 1, Chrome 1, IE 7,
 # Opera 5 and Safari 1.
-## ssl_cipher_list=ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA
+## ssl_cipher_list=ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA
 
 # Path to default Certificate Authority certificates.
 ## ssl_cacerts=/etc/hue/cacerts.pem
@@ -177,6 +186,12 @@ http_500_debug_mode=false
 # Enable X-Forwarded-Host header if the load balancer requires it.
 ## use_x_forwarded_host=true
 
+# Enable X-Forwarded-For header if hive/impala requires it.
+## enable_xff_for_hive_impala=true
+
+# Enable X-CSRF-Token header if hive/impala requries it
+## enable_x_csrf_token_for_hive_impala=true
+
 # Support for HTTPS termination at the load-balancer level with SECURE_PROXY_SSL_HEADER.
 ## secure_proxy_ssl_header=false
 
@@ -188,6 +203,14 @@ http_500_debug_mode=false
 # For example, to restrict to your local domain and FQDN, the following value can be used:
 # ^\/.*$,^http:\/\/www.mydomain.com\/.*$
 ## redirect_whitelist=^(\/[a-zA-Z0-9]+.*|\/)$
+
+# Image version/ Build version of Hue
+# hue_image_version="2022.2.2.1"
+## hue_image_version=
+
+# Name of the Hue host
+# hue_host="hue-hive-1"
+## hue_host=
 
 # Comma separated list of apps to not load at server startup.
 # e.g.: pig,zookeeper
@@ -427,16 +450,17 @@ idle_session_timeout=-1
 ## reverse_proxy_header=HTTP_X_FORWARDED_FOR
 
 [[[jwt]]]
-# Adds custom JWT Authentication backend for REST APIs in top priority.
-## is_enabled=false
-
 # Endpoint to fetch the public key from verification server.
+# Also adds custom JWT Authentication backend for REST APIs in top priority if set.
 ## key_server_url=https://ext_authz:8000
 
-# The identifier of the service issued the JWT
+# The JWT payload header containing the username.
+## username_header=sub
+
+# The identifier of the service issued the JWT.
 ## issuer=None
 
-# The identifier of the resource intend to access
+# The identifier of the resource intend to access.
 ## audience=None
 
 # Verify custom JWT signature.
@@ -911,11 +935,36 @@ tls=no
 
 # Settings for the Google Cloud lib
 # ------------------------------------------------------------------------
+
 [[gc_accounts]]
 [[[default]]]
 # The JSON credentials to authenticate to Google Cloud e.g. '{ "type": "service_account", "project_id": .... }'
-# json_credentials=None
+## json_credentials=None
 
+## Configuration for Ozone File System
+# ------------------------------------------------------------------------
+[[ozone]]
+# Default Ozone cluster
+[[[default]]]
+# Enter the filesystem URI
+## fs_defaultfs=ofs://localhost:8020
+
+# NameNode logical name.
+## logical_name=
+
+# Use HttpFS as the communication mechanism.
+# Domain should be the HttpFS host and port.
+# Default port is 9778 for HttpFS.
+## webhdfs_url=http://localhost:9778/webhdfs/v1
+
+# Whether Ozone requires client to perform Kerberos authentication.
+## security_enabled=false
+
+# Choose whether Hue should validate certificates received from the server.
+## ssl_cert_ca_verify=true
+
+# Directory of the Ozone configuration
+## ozone_conf_dir=$OZONE_CONF_DIR when set or '/etc/ozone/conf'
 
 ## Configuration for RAZ service integration
 # ------------------------------------------------------------------------
@@ -926,11 +975,14 @@ tls=no
 ## Endpoint to contact
 # api_url=https://localhost:8080
 
-## How to authenticate against: KERBEROS or JWT (not supported yet)
+## How to authenticate against: KERBEROS or JWT
 # api_authentication=KERBEROS
 
 ## Autocreate the user home directory in the remote home storage path.
 # autocreate_user_dir=true
+
+## Enable integration with Google Storage for RAZ
+# is_raz_gs_enabled=false
 
 ###########################################################################
 # Settings to configure the snippets available in the Notebook
@@ -971,6 +1023,10 @@ tls=no
 
 ## Default limit to use in SELECT statements if not present. Set to 0 to disable.
 # default_limit=5000
+
+## Set the default interpreter for all users. 
+## Starred interpreters at user level will get more priority than the value below.
+# default_interpreter=
 
 # One entry for each type of snippet.
 [[interpreters]]
@@ -1088,6 +1144,13 @@ tls=no
 # [[[shell]]]
 #   name=Shell
 #   interface=oozie
+
+# [[[trino]]]
+#   name=Trino
+#   interface=trino
+#   ## username and password for LDAP enabled over HTTPS.
+#   options='{"url": "http://localhost:8080", "auth_username": "", "auth_password": ""}'
+
 
 # [[[presto]]]
 # name=Presto SQL
@@ -1218,6 +1281,9 @@ fs_defaultfs=hdfs://localhost:8020
 # Whether Hue should list this HDFS cluster. For historical reason there is no way to disable HDFS.
 ## is_enabled=true
 
+# Size, in bytes, of the chunks Django should store into memory and feed into the handler. Default is 64MB.
+## upload_chunk_size=64*1024*1024
+
 # Configuration for YARN (MR2)
 # ------------------------------------------------------------------------
 [[yarn_clusters]]
@@ -1339,6 +1405,9 @@ submit_to=True
 
 # Timeout in seconds for thrift calls to Hive service
 ## server_conn_timeout=120
+
+# Timeout in seconds for zookeeper connectivity to get the znode information
+## zookeeper_conn_timeout=30
 
 # Choose whether to use the old GetLog() thrift call from before Hive 0.14 to retrieve the logs.
 # If false, use the FetchResults() thrift call from Hive 1.0 or more instead.
@@ -1582,6 +1651,13 @@ submit_to=True
 # Optionally set this if you want a different home directory path. e.g. s3a://gethue.
 ## remote_storage_home=s3a://gethue
 
+# Optionally set this to control the caching strategy for files download
+## file_download_cache_control=no-store, no-cache, max-age=0, must-revalidate, proxy-revalidate
+
+# A limit on a file size (bytes) that can be uploaded to a filesystem.
+# A value of -1 means there will be no limit.
+## max_file_size_upload_limit=-1
+
 ###########################################################################
 # Settings to configure Pig
 ###########################################################################
@@ -1751,16 +1827,15 @@ submit_to=True
 # Show the Hive section for listing the query history and providing more troubleshooting information.
 ## enable_hive_query_browser=false
 
-# Show the Queries section for listing Hive/Impala query history and providing more troubleshooting information.
-## enable_queries_list=false
-
 # Use the proxy API instead of the ORM to access the query_store.
 ## use_proxy=true
 
 [[query_store]]
 # URL of Query Store API server.
-##server_url=http://localhost:8080/
+##server_url=
 
+# Show the Hive/Impala queries UI. The value is automatically set to false if server_url is empty, else true.
+##is_enabled=false
 
 ###########################################################################
 # Settings to configure Sentry / Security App.
